ordered list is added

--- a/index.html
+++ b/index.html
@@ -5,14 +5,27 @@
     </head>
     <body>
         <h1>Deepthi Kaithi</h1>
-    </body>
-</html>
-     <head>
+
+    
          <h2>Paris</h2>
          <p>
          <b>Paris</b> is a major <b>European City</b> and it is a global centre for art, fashion and culture.
          Eiffel tower is one of the best places to visit in paris.
          The <b>Eiffel Tower</b> is a <b>wrought-iron lattice tower</b> on the Champ de Mars in Paris, France.  
          </p>
-     </head>
      
+     <hr>
+     <h2>Directions to my favourite place</h2>
+     <ol>
+         <li>Maryville to Kansas</li>
+         <ol>
+            <li>Go to kansas MCI airport</li>
+            <li>catch the flight</li>
+         </ol>
+         <li>Kansas to Texas</li>
+         <ol>
+             <li>Land in texas airport</li>
+         </ol>
+     </ol>
+    </body>
+     </html>
