--- a/index.html
+++ b/index.html
@@ -27,5 +27,10 @@
              <li>Land in texas airport</li>
          </ol>
      </ol>
+     <h2>Items to carry to favourite place for Maximum enjoyment</h2>
+     <ul>
+         <li>DSLR Camera</li>
+         <li>Games like UNO and Sequence</li>
+     </ul>
     </body>
      </html>
