Unordered list added

--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@
      <h2>Items to carry to favourite place for Maximum enjoyment</h2>
      <ul>
          <li>DSLR Camera</li>
-         <li>Games like UNO and Sequence</li>
+         <li>Games like Uno and Sequence</li>
      </ul>
+
     </body>
      </html>
