--- a/index.html
+++ b/index.html
@@ -32,6 +32,6 @@
          <li>DSLR Camera</li>
          <li>Games like Uno and Sequence</li>
      </ul>
-
+     <a href="./aboutme.html">Link to aboutme</a>
     </body>
-     </html>
+</html>
