--- a/aboutme.html
+++ b/aboutme.html
@@ -5,4 +5,4 @@ Superman was born on the planet Krypton.
 Superman has many abilities which include Ocular powers, Superhuman breath, Invulnerability 
 and Access to high-tech equipment and so on.
 </p>
-<img src="./image2.png">My Superhero</img>
+<img src="./image2.png"/>
