--- a/aboutme.html
+++ b/aboutme.html
@@ -6,3 +6,18 @@ Superman has many abilities which include Ocular powers, Superhuman breath, Invu
 and Access to high-tech equipment and so on.
 </p>
 <img src="./image2.png">My superhero</img>
+<hr>
+     <h2>My favourite food that i recommand to try</h2>
+     <P>Here i am providing information about my fav food that i recommand others to try</P>
+     <table>
+         <tr>
+             <th>Item</th>
+             <th>Location</th>
+             <th>Amount</th>
+         </tr>
+         <tr>
+             <td>Chicken Biryani</td>
+             <td>Hyderabad</td>
+             <td>40$</td>
+         </tr>
+     </table>
