All set good to go

--- a/aboutme.html
+++ b/aboutme.html
@@ -4,20 +4,7 @@ Superman is a superhero who first appeared in American comic books published by 
 Superman was born on the planet Krypton.
 Superman has many abilities which include Ocular powers, Superhuman breath, Invulnerability 
 and Access to high-tech equipment and so on.
+My superpower is to sing.
 </p>
 <img src="./image2.png">My superhero</img>
-<hr>
-     <h2>My favourite food that i recommand to try</h2>
-     <P>Here i am providing information about my fav food that i recommand others to try</P>
-     <table>
-         <tr>
-             <th>Item</th>
-             <th>Location</th>
-             <th>Amount</th>
-         </tr>
-         <tr>
-             <td>Chicken Biryani</td>
-             <td>Hyderabad</td>
-             <td>40$</td>
-         </tr>
-     </table>
+
